# RRCodingAssessment

./: .gitignore  README.md
FibonacciBackend/: Dockerfile  README.md  pyproject.toml
FibonacciBackend/app/: main.py
FibonacciBackend/app/api/: main.py
FibonacciBackend/app/api/routes/: fibonacci.py
FibonacciBackend/app/core/: config.py  response_messages.py
FibonacciBackend/app/tests/: configtest.py
FibonacciBackend/app/tests/routes/: test_fibonacci.py
FibonacciFrontend/: README.md  angular.json  cypress.config.ts  environment.ts  package-lock.json  package.json  tsconfig.json
FibonacciFrontend/cypress/e2e/: fibonacci.cy.ts
FibonacciFrontend/src/: custom-theme.scss  index.html  styles.css
FibonacciFrontend/src/app/: app.component.css  app.component.html  app.component.ts  app.config.ts  app.module.ts
FibonacciFrontend/src/app/fibonacci/: fibonacci.service.ts
