[tool.poetry]
name = "fibonaccibackend"
version = "0.1.0"
description = ""
authors = ["Navi Says Listen <taylor.navi.stone@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.115.11"}
pydantic = "^2.10.6"
pydantic-settings = "^2.8.1"
pytest = "^8.3.5"
httpx = "^0.28.1"
pytest-asyncio = "^0.25.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
